<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LovemoMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="imagebutton">显示图片</string>
    <string name="start_time">0:00</string>
    <string name="stop_time">3:00</string>
    <string name="show_name">泡沫</string>
    <string name="be_playing">无正在播放的音乐</string>
    <string name="no_playlist">列表没有歌曲</string>
    <string name="shownoin">没有网络！！！</string>
    <string name="play">播放</string>
    <string name="list">列表</string>
    <string name="sousuo">搜索</string>
    <string name="player_lyric">传播好声音</string>
    <string name="topic1">默认魅力紫</string>
    <string name="topic_zongse">复古棕</string>
    <string name="topic_3">酷炫蓝</string>
    <string name="Shutdown">关闭</string>
    <string name="tvdlog">30秒后应用将关闭</string>
    <string name="username">账号</string>
    <string name="userpsw">"密码"</string>
    <string name="denglu">登录</string>
    <string name="zhuce">注册</string>
    <string name="wangjimima">忘记密码</string>
    <string name="encrypted">密保</string>
    <string name="answer">答案</string>
    <string name="querenmima">请确认您的密码</string>
    <string name="inputusername">请输入您的账号</string>
    <string name="inputuserpsw">请输入您的密码</string>
    <string name="inputmibao">请输入您的密保问题</string>
    <string name="inputanswer">请输入您要设置的答案</string>
    <string name="empty">清空</string>
    <string name="zhaohuimima">找回密码</string>
    <string name="mibaowenti">密保问题：</string>
    <string name="inputyouanswer">验证答案：</string>
    <string name="newpassword">新的密码：</string>
    <string name="ok">确定</string>
    <string name="loginandreg">登录/注册</string>
    <string name="resetyourpassword">重置密码</string>
    <string name="cancel">取消</string>
    <string name="themesettings">主题设置</string>
    <string name="timingclosure">定时关闭</string>
    <string name="back">返回</string>
    <string name="input_keyword">请输入您要搜索的关键字</string>
    <string name="contacts_string">Total number of contacts: %1$,d\nFirst contact:<b>%2$s</b></string>
    <string name="contacts_none">No contacts stored on device.</string>
    <string name="contacts_empty">Contacts not loaded.</string>
    <string name="add_contact">Add a contact</string>
    <string name="show_contact">Show first contact</string>
    <string name="contacts_intro">This fragment demonstrates access to the contact database on the device.\n
            Clicking \"Add a contact\" adds a new contact named "__DUMMY ENTRY" directly into the database.\n
    Clicking \"Show first contact\" accesses the contact database to display the name of the first contact.</string>
    <string name="camera_unavailable"><b>Camera could not be opened.</b>\nThis occurs when the camera is not available (for example it is already in use) or if the system has denied access (for example when camera access has been disabled).</string>
    <string name="show_camera">Show camera preview</string>
    <string name="show_contacts">Show and add contacts</string>
    <string name="show_multi">request multi permission</string>
    <string name="main_introduction">Click the buttons below to show a camera preview or access the contacts database.\nNote that the contacts option is only available on Android M to illustrate the use of optional, M-only permissions that are not requested on lower SDK platforms.</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permision_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access.</string>
    <string name="permission_camera_user_hint">test onRequestPermissionsResult: 没有此权限，无法开启这个功能，请开启权限。请打开照相机权限</string>
    <string name="permission_camera_user_hint1">test shouldShowRequestPermissionRationale: 没有此权限，无法开启这个功能，请开启权限。请打开照相机权限</string>


    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_close">关闭</string>
    <string name="text_no_show">不再显示</string>
    <string name="text_splash_need_to_access">需要文件读写权限进行文件下载及获取电话状态权限！</string>
    <string name="text_splash_open_the_necessary_permissions">是否进入应用信息开启必要权限？</string>
</resources>
