<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/retrievlayout" >

    <TextView
        android:id="@+id/tv_showusername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/resetyourpassword"
        android:textColor="@color/textcolors"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_showusername"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/ci9"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/mibaowenti"
        android:textColor="@color/textcolors"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/tv_showproblem"
        android:background="@mipmap/ci9"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/inputyouanswer"
        android:textColor="@color/textcolors"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_retranswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/tv_showproblem"
        android:layout_alignParentRight="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/et_retranswer"
        android:layout_marginTop="30dp"
        android:background="@mipmap/ci9"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/newpassword"
        android:textColor="@color/textcolors"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_newpsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/et_retranswer"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/et_newpsw"
        android:layout_marginRight="5dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/tv_showproblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="TextView"
        android:textColor="#FFFFCC"
        android:textSize="20sp" />

</RelativeLayout>
